Config/Feature(Frontend backend connection minor fixes and improviments | working well res and req)

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,6 +6,6 @@
   <title>React App</title>
 </head>
 <body>
-  <div id="root"></div> <!-- Este é o ponto de entrada para o React -->
+  <div id="root"></div>
 </body>
 </html>
